filter files by regexpattern, handle empty/null values.

--- a/config/example_settings.yaml
+++ b/config/example_settings.yaml
@@ -1,5 +1,6 @@
 targets:
   - folder: /Users/marcowarm/Downloads/teams
+    filePattern: .*\.xlsx
     metrics:
       - name: team_output_target_quantity
         metricType: gauge
